syntax = "proto3";
package sequencer;

import "bignum.proto";

option java_multiple_files = true;
option java_package = "co.chainring.sequencer.proto";
option java_outer_classname = "CheckpointSchema";

message MetaInfoCheckpoint {
  repeated string markets = 1;
  uint64 makerFeeRate = 2;
  uint64 takerFeeRate = 3;
}

message BalancesCheckpoint {
  repeated Balance balances = 1;

  message Balance {
    uint64 wallet = 1;
    string asset = 2;
    IntegerValue amount = 3;
    repeated Consumption consumed = 4;

    message Consumption {
      string marketId = 1;
      IntegerValue consumed = 2;
    }
  }
}

message MarketCheckpoint {
  string id = 1;
  DecimalValue tickSize = 2;
  DecimalValue marketPrice = 3;
  uint32 maxLevels = 4;
  uint32 maxOrdersPerLevel = 5;
  uint32 baseDecimals = 6;
  uint32 quoteDecimals = 7;
  int32 maxOfferIx = 8;
  int32 minBidIx = 9;
  repeated OrderBookLevel levels = 10;
  optional DecimalValue bestBid = 11;
  optional DecimalValue bestOffer = 12;

  message OrderBookLevel {
    int32 levelIx = 1;
    BookSide side = 2;
    DecimalValue price = 3;
    uint32 maxOrderCount = 4;
    IntegerValue totalQuantity = 5;
    uint32 orderHead = 6;
    uint32 orderTail = 7;
    repeated LevelOrder orders = 8;
  }

  enum BookSide {
    Buy = 0;
    Sell = 1;
  }

  message LevelOrder {
    uint64 guid = 1;
    uint64 wallet = 2;
    IntegerValue quantity = 3;
    uint32 levelIx = 4;
    IntegerValue originalQuantity = 5;
    uint64 feeRate = 6;
  }
}
